--- a/src/Application/Views/inscrire.fxml
+++ b/src/Application/Views/inscrire.fxml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -11,52 +14,40 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="503.0" prefWidth="854.0" style="-fx-background-color: #fff;"
-            xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="Application.Controllers.LoginController">
+<AnchorPane id="AnchorPane" prefHeight="503.0" prefWidth="854.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Application.Controllers.LoginController">
     <children>
-        <Pane layoutX="94.0" layoutY="46.0" prefHeight="432.0" prefWidth="687.0">
+        <Pane layoutX="84.0" layoutY="48.0" prefHeight="432.0" prefWidth="687.0">
             <children>
-                <Button fx:id="btnSignin" layoutX="234.0" layoutY="329.0" mnemonicParsing="false" prefHeight="34.0"
-                        prefWidth="220.0" stylesheets="@../../resources/Styles/LoginStyling.css" text="Sign up"/>
-                <Button fx:id="btnSignup" layoutX="599.0" layoutY="385.0" mnemonicParsing="false"
-                        onAction="#GoBackSignIn_click" prefHeight="34.0" prefWidth="74.0"
-                        stylesheets="@../../resources/Styles/LoginStyling.css" text="Sign in"/>
-                <Separator layoutX="545.0" layoutY="363.0" orientation="VERTICAL" prefHeight="55.0" prefWidth="31.0"/>
-                <Label alignment="CENTER" layoutX="514.0" layoutY="379.0" prefHeight="23.0" prefWidth="31.0"
-                       style="-fx-background-color: #fff;" text="Or" textFill="#5b5a5a">
+                <Button fx:id="btnSignin" layoutX="255.0" layoutY="368.0" mnemonicParsing="false" onAction="#sinscrire_Click" prefHeight="43.0" prefWidth="192.0" stylesheets="@../../resources/Styles/LoginStyling.css" text="Sign up" />
+                <Button fx:id="btnSignup" layoutX="599.0" layoutY="385.0" mnemonicParsing="false" onAction="#GoBackSignIn_click" prefHeight="34.0" prefWidth="74.0" stylesheets="@../../resources/Styles/LoginStyling.css" text="Sign in" />
+                <Separator layoutX="568.0" layoutY="364.0" orientation="VERTICAL" prefHeight="55.0" prefWidth="31.0" />
+                <Label alignment="CENTER" layoutX="545.0" layoutY="391.0" prefHeight="23.0" prefWidth="31.0" style="-fx-background-color: #fff;" text="Or" textFill="#5b5a5a">
                     <font>
-                        <Font name="Segoe UI" size="12.0"/>
+                        <Font name="Segoe UI" size="12.0" />
                     </font>
                 </Label>
-                <Label fx:id="lblErrors" alignment="CENTER" layoutX="8.0" layoutY="95.0" prefHeight="23.0"
-                       prefWidth="275.0" textFill="#ff6354">
+                <Label fx:id="lblErrors" alignment="CENTER" layoutX="8.0" layoutY="95.0" prefHeight="23.0" prefWidth="275.0" textFill="#ff0000">
                     <font>
-                        <Font name="Segoe UI" size="10.0"/>
+                        <Font name="Segoe UI" size="10.0" />
                     </font>
                 </Label>
-                <TextField fx:id="txtTelephone" layoutX="435.0" layoutY="89.0" prefHeight="34.0" prefWidth="220.0"
-                           promptText="Telephone"/>
-                <PasswordField fx:id="txtAdresse" layoutX="435.0" layoutY="159.0" prefHeight="34.0" prefWidth="220.0"
-                               promptText="Adresse" stylesheets="@../../resources/Styles/LoginStyling.css"/>
-                <PasswordField fx:id="txtPassword12" layoutX="435.0" layoutY="225.0" prefHeight="34.0" prefWidth="220.0"
-                               promptText="password" stylesheets="@../../resources/Styles/LoginStyling.css"/>
-                <TextField fx:id="txtMassar" layoutX="28.0" layoutY="24.0" prefHeight="34.0" prefWidth="220.0"
-                           promptText="Code Massar"/>
-                <PasswordField fx:id="txtNom" layoutX="28.0" layoutY="94.0" prefHeight="34.0" prefWidth="220.0"
-                               promptText="Nom" stylesheets="@../../resources/Styles/LoginStyling.css"/>
-                <PasswordField fx:id="txtPrenom" layoutX="28.0" layoutY="159.0" prefHeight="34.0" prefWidth="220.0"
-                               promptText="Prenom" stylesheets="@../../resources/Styles/LoginStyling.css"/>
-                <PasswordField fx:id="txtNaissance" layoutX="28.0" layoutY="225.0" prefHeight="34.0" prefWidth="220.0"
-                               promptText="Date Naissance" stylesheets="@../../resources/Styles/LoginStyling.css"/>
-                <PasswordField fx:id="txtEmail" layoutX="435.0" layoutY="24.0" prefHeight="34.0" prefWidth="220.0"
-                               promptText="Email" stylesheets="@../../resources/Styles/LoginStyling.css"/>
+                <TextField fx:id="txtTelephone" layoutX="28.0" layoutY="289.0" prefHeight="40.0" prefWidth="230.0" promptText="Telephone" />
+                <TextField fx:id="txtAdresse" layoutX="407.0" layoutY="24.0" prefHeight="40.0" prefWidth="230.0" promptText="Adresse" stylesheets="@../../resources/Styles/LoginStyling.css" />
+                <PasswordField fx:id="txtPassword12" layoutX="407.0" layoutY="225.0" prefHeight="40.0" prefWidth="230.0" promptText="password" stylesheets="@../../resources/Styles/LoginStyling.css" />
+                <TextField fx:id="txtMassar" layoutX="28.0" layoutY="24.0" prefHeight="40.0" prefWidth="230.0" promptText="Code Massar" />
+                <TextField fx:id="txtNomComplet" layoutX="28.0" layoutY="94.0" prefHeight="40.0" prefWidth="230.0" promptText="Nom + Prenom" stylesheets="@../../resources/Styles/LoginStyling.css" />
+                <TextField fx:id="txtnaissance" layoutX="28.0" layoutY="159.0" prefHeight="40.0" prefWidth="230.0" promptText="Date Naissance" stylesheets="@../../resources/Styles/LoginStyling.css" />
+                <TextField fx:id="txtMail" layoutX="28.0" layoutY="225.0" prefHeight="40.0" prefWidth="230.0" promptText="Email" stylesheets="@../../resources/Styles/LoginStyling.css" />
+            <CheckBox layoutX="409.0" layoutY="275.0" mnemonicParsing="false" text="Doublant" />
+            <RadioButton fx:id="HommeRadio" layoutX="409.0" layoutY="309.0" mnemonicParsing="false" text="Homme" />
+            <RadioButton fx:id="FemmeRadio" layoutX="503.0" layoutY="309.0" mnemonicParsing="false" text="Femme" />
+            <ComboBox fx:id="CBGroupe" layoutX="407.0" layoutY="94.0" prefHeight="40.0" prefWidth="230.0" />
+            <TextField fx:id="txtUsername" layoutX="407.0" layoutY="159.0" prefHeight="40.0" prefWidth="230.0" promptText="Email" stylesheets="@../../resources/Styles/LoginStyling.css" />
             </children>
         </Pane>
-        <ImageView fitHeight="41.0" fitWidth="34.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true"
-                   preserveRatio="true">
+        <ImageView fitHeight="41.0" fitWidth="34.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@../../resources/images/LoginIcons/icons8_XING_100px.png"/>
+                <Image url="@../../resources/images/LoginIcons/icons8_XING_100px.png" />
             </image>
         </ImageView>
     </children>
