--- a/src/Application/Views/GestionGroupe.fxml
+++ b/src/Application/Views/GestionGroupe.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -37,22 +39,22 @@
                 <Font name="Arial Bold Italic" size="15.0" />
             </font>
         </Label>
-        <ComboBox layoutX="237.0" layoutY="99.0" prefWidth="150.0" promptText="Branche">
+        <ComboBox layoutX="240.0" layoutY="99.0" prefWidth="150.0" promptText="Branche">
             <effect>
                 <DropShadow />
             </effect>
         </ComboBox>
-        <Label layoutX="411.0" layoutY="103.0" text="en">
+        <Label layoutX="415.0" layoutY="103.0" text="en">
             <font>
                 <Font name="Arial Bold Italic" size="15.0" />
             </font>
         </Label>
-        <ComboBox layoutX="441.0" layoutY="100.0" prefWidth="150.0" promptText="Niveau">
+        <ComboBox layoutX="449.0" layoutY="99.0" prefWidth="150.0" promptText="Niveau">
             <effect>
                 <DropShadow />
             </effect>
         </ComboBox>
-        <Label layoutX="620.0" layoutY="103.0" text=", le groupe ">
+        <Label layoutX="614.0" layoutY="103.0" text=", le groupe ">
             <font>
                 <Font name="Arial Bold Italic" size="15.0" />
             </font>
@@ -86,6 +88,11 @@
         </Label>
         <TextField disable="true" editable="false" layoutX="652.0" layoutY="272.0" prefHeight="26.0" prefWidth="101.0" />
         <ComboBox fx:id="cb_branche" layoutX="127.0" layoutY="273.0" onAction="#cb_branche_selected" prefWidth="150.0" promptText="Matiéres">
+            <items>
+                <FXCollections fx:factory="observableArrayList">
+                    <String fx:value="-Choisir-" />
+                </FXCollections>
+            </items>
             <effect>
                 <DropShadow />
             </effect>
@@ -97,7 +104,7 @@
         </Label>
         <FlowPane fx:id="floawLayout_matiere" layoutX="34.0" layoutY="329.0" prefHeight="96.0" prefWidth="486.0">
             <children>
-                <Label alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT" prefHeight="18.0" prefWidth="118.0" style="-fx-background-color: dodgerblue; -fx-background-radius: 30; -fx-border-radius: 30;" text="Français" textAlignment="CENTER">
+                <Label alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT" onMouseClicked="#test_click" prefHeight="18.0" prefWidth="118.0" style="-fx-background-color: dodgerblue; -fx-background-radius: 30; -fx-border-radius: 30;" text="Français" textAlignment="CENTER">
                     <FlowPane.margin>
                         <Insets />
                     </FlowPane.margin>
@@ -110,36 +117,31 @@
                 <Insets left="10.0" right="10.0" top="10.0" />
             </padding>
         </FlowPane>
-      <ImageView fitHeight="26.0" fitWidth="18.0" layoutX="280.0" layoutY="278.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../resources/images/add.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="26.0" fitWidth="18.0" layoutX="389.0" layoutY="102.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../resources/images/add.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="26.0" fitWidth="18.0" layoutX="594.0" layoutY="103.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../resources/images/add.png" />
-         </image>
-      </ImageView>
-      <Button layoutX="542.0" layoutY="384.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="203.0" text="Nouveau Groupe !">
-         <graphic>
-            <ImageView fitHeight="29.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../resources/images/group.png" />
-               </image>
-            </ImageView>
-         </graphic>
-         <font>
-            <Font name="System Bold Italic" size="12.0" />
-         </font>
-         <effect>
-            <DropShadow />
-         </effect>
-      </Button>
+        <ImageView fitHeight="26.0" fitWidth="18.0" layoutX="280.0" layoutY="278.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@../../resources/images/add.png" />
+            </image>
+        </ImageView>
+        <ImageView fitHeight="26.0" fitWidth="18.0" layoutX="392.0" layoutY="102.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@../../resources/images/add.png" />
+            </image>
+        </ImageView>
+        <Button layoutX="542.0" layoutY="384.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="203.0" text="Nouveau Groupe !">
+            <graphic>
+                <ImageView fitHeight="29.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@../../resources/images/group.png" />
+                    </image>
+                </ImageView>
+            </graphic>
+            <font>
+                <Font name="System Bold Italic" size="12.0" />
+            </font>
+            <effect>
+                <DropShadow />
+            </effect>
+        </Button>
 
     </children>
 </AnchorPane>
